--- a/_config.yml
+++ b/_config.yml
@@ -23,7 +23,7 @@ description: >- # used by seo meta and the atom feed
 
 # Fill in the protocol & hostname for your site.
 # e.g. 'https://username.github.io', note that it does not end with a '/'.
-url: "https://curiousnish.github.io/portfolio"
+url: "https://curiousnish.github.io"
 
 github:
   username: curiousnish # change to your github username
@@ -148,7 +148,7 @@ pwa:
 paginate: 10
 
 # The base URL of your site
-baseurl: ""
+baseurl: "/portfolio"
 
 # ------------ The following options are not recommended to be modified ------------------
 
